//
//  UIImage+Charter.swift
//  TestAircall
//
//  Created by Delphine Garcia on 27/06/2021.
//

import UIKit

extension UIImage {
    static let info = UIImage(systemName: "exclamationmark.circle")
    static let archive = UIImage(systemName: "archivebox")
    static let arrowUpRight = UIImage(systemName: "arrow.up.right")
    static let arrowDownLeft = UIImage(systemName: "arrow.down.left")
}
